--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Save All Resources",
+  "name": "Save m3u8",
   "version": "2.0.6",
   "description": "Save all resources files with retaining folder structure.",
   "author": "up209d",
